# cconv

./: .envrc  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  justfile
include/: basic_operators.h  cli_options.h  conv_opts.h  helpers.h  invert.h  matrixconv.h  point_opts.h
src/: basic_operators.c  cli_options.c  conv_opts.c  helpers.c  invert.c  main.c  matrixconv.c  point_opts.c
src/imp_tests/: Makefile  getargs_loop.c  getargs_loop.h  main.c
tests/images/img_out/: output
tests/imp_tests/: args_loop.c  args_loop.h  get_args.c  main.c  test
